--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Dev Tailler — Aleksandr Peretertov</title>
+    <title>Dev Aleksandr Peretertov</title>
 </head>
 <body>
     <div id="root"></div>
